# o365-rewrite

docs/: auth-debug.md
modern-project/: README.md
modern-project/backend/: README.md  pyproject.toml  requirements.txt
modern-project/backend/app/: config.py  database.py  graph.py  main.py  models.py  security.py  services.py
modern-project/backend/app/api/routers/: auth.py  domains.py  invites.py  licenses.py  reports.py  system.py  users.py
modern-project/backend/app/repositories/: in_memory.py
modern-project/backend/app/routers/: auth.py  invites.py  licenses.py  reports.py  settings.py  tenants.py  users.py
modern-project/backend/app/services/: auth_service.py  domain_service.py  license_service.py  ms_graph.py  report_service.py  system_service.py  user_service.py
modern-project/frontend/: README.md  index.html  package.json  tsconfig.json
modern-project/frontend/src/: App.vue  main.ts
modern-project/frontend/src/api/: client.ts  endpoints.ts
modern-project/frontend/src/components/: AppShell.vue  InviteDrawer.vue  UserTable.vue
modern-project/frontend/src/router/: index.ts
modern-project/frontend/src/stores/: api.ts  session.ts  tenant.ts  users.ts
modern-project/frontend/src/styles/: main.css
modern-project/frontend/src/views/: DashboardView.vue  InvitesView.vue  LicensesView.vue  LoginView.vue  ReportsView.vue  SettingsView.vue  TenantsView.vue  UsersView.vue
