[project]
name = "o365-modern-panel"
version = "0.1.0"
description = "Modern FastAPI rewrite of the O365 management panel"
authors = [{name = "Modern Rewrite"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi~=0.111",
  "uvicorn[standard]~=0.30",
  "pydantic-settings~=2.3",
  "httpx~=0.27"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
